# practice

./: CMakeLists.txt  README.md  package.xml  turtlebot_pointcloud_to_laserscan_nodelet.launch
cpp/: .#test000.cpp  test000  test000.cpp  test000.cpp~
euslisp/: README.md  hrp2jsknt-ex-test.l~  jvrc_r5.l  pepper-practice.l  pepper-practice.l~
launch/: freenect_depthimage_to_laserscan.launch  pepper_depth_processing_test.launch  pepper_pointcloud_to_laserscan_nodelet.launch  rgbd_xtion_odom_mapping.launch
misc/: dot-bashrc-2014.txt  dot-rosinstall_2015_0623  dot-rosinstall_2016_1111  nasa-ros-pkg-hydro-devel.rosinstall  opti_track_lecture.txt
practice/: CMakeLists.txt  README.md  package.xml
scripts/: rosbag_multisense.sh
test_node/: CMakeLists.txt  README.md  package.xml
test_node/cpp/: Makefile
test_node/euslisp/: hrp2jsk-flex-extend.l  hrp2jsk-jump-test.l  hrp2jsknt-ex-test.l  jvrc_r5.l  samplerobot-jump-test.l  samplerobot-test.l
test_node/launch/: gazebo_hrp2jsk_no_controllers_flex_extend.launch  openni2_pointcloud_to_laserscan_node.launch  pepper_pointcloud_to_laserscan_node.launch  turtlebot_pointclout_to_laserscan_gmapping_demo.launch  turtlebot_rtabmap_ros.launch  turtlebot_rtabmap_ros_gazebo.launch  turtlebot_test_zone.launch
test_node/src/: pub_test.cpp  sub_test.cpp
test_nodelet/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
test_nodelet/include/test_nodelet/: TestNodeletClass.h  test_nodelet.h
test_nodelet/src/: TestNodeletClass.cpp  test_nodelet.cpp
