<?xml version="1.0"?>
<package format="2">
  <name>test_node</name>
  <version>0.0.0</version>
  <description>The test_node package</description>

  <maintainer email="y-tanaka@todo.todo">y-tanaka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export></export> -->
</package>
